software-center (3.1.7) UNRELEASED; urgency=low

  [ Michael Vogt ]
  * refactor "SoftwarePane.refresh_apps()" code, this ensures
    the app lists are only ever (re)created if something changes
    and so avoiding nasty UI flashes (code is simpler now as well)
  
  [ Matthew McGowan ]
  * merged lp:~mmcg069/software-center/bubbles, this gives us
    pretty bubbles in the viewswitcher

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 10 Dec 2010 18:08:35 +0100

software-center (3.1.6) natty; urgency=low

  [ Gary Lasker ]
  * softwarecenter/utils.py,
    softwarecenter/view/appdetailsview_gtk.py:
    - disable find-it-in-the-menu under Unity (LP: #639701)
  
  [ Michael Vogt ]
  * merged lp:~mvo/software-center/no-search-results-help that 
    brings search suggestions for spelling corrections
  * add compat mode so that the current code can still be run on 
    maverick for now

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 09 Dec 2010 16:51:07 +0100

software-center (3.1.5) natty; urgency=low

  * softwarecenter/app.py:
    - on a invalid locale, reset the locale to "C" to avoid
      later crashes in the apthistory that uses strptime 
      (lp: #630248)
  * softwarecenter/view/appview.py:
    - fix crash with the latest python-xapian (LP: #687399)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 08 Dec 2010 18:05:05 +0100

software-center (3.1.4) natty; urgency=low

  [ Michael Vogt ]
  * softwarecenter/db/database.py:
    - add section and origin query parser prefixes, thanks to
      Matthew McGowan!
  * merged lp:~mvo/software-center/experimental-fastlist and
    lp:~kiwinote/software-center/experimental-fastlist, this should
    speed up the list rendering quite a lot
  * merged lp:~kelemeng/software-center/bug685467, many thanks!
    (LP: #685467)
  * softwarecenter/backend/aptd.py:
    - ported to the aptdaemon 0.40 API
  * debian/control: 
    - depend on aptdaemon 0.40

  [ Kiwinote ]
  * softwarecenter/backend/channel.py: